# wenxian

./: .env.example  .gitignore  AI自动筛选整理文献系统-技术设计文档.md  AI自动筛选整理文献系统-项目方案.md  CNKI-20260320143210529.bib  CNKI-20260320143726436.txt  CNKI-20260320143821757.enw  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  project_session_log.md  project_state.md  scopus_export_Mar 20-2026_228ffd90-f18c-466f-9035-51f6400cf2c1.bib  scopus_export_Mar 20-2026_5136afff-7a2e-45c0-b397-6ea33975cd3b.bib  scopus_export_Mar 20-2026_88abb9c5-0ca5-4317-9edc-23e80ae4daa5.bib  scopus_export_Mar 20-2026_88dfa1a4-658b-4620-8be4-c1c1db16c93b.bib  scopus_export_Mar 20-2026_c2e4649e-a142-464c-a172-5d6d6db3a28e.bib  start-wenxian-dev.cmd  start-wenxian-dev.command  start-wenxian-dev.ps1  start-wenxian.cmd  start-wenxian.command  start-wenxian.ps1  stop-wenxian-dev.cmd  stop-wenxian-dev.command  stop-wenxian-dev.ps1  stop-wenxian.cmd  stop-wenxian.command  stop-wenxian.ps1  灌溉文献.md  筛选形成报告.md
literature_screening/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
literature_screening/.streamlit/: config.toml
literature_screening/.venv311-codex/: pyvenv.cfg
literature_screening/configs/: config.cnki-compat.yaml  config.cnki-enw.yaml  config.example.yaml  config.fat-pubmed.deepseek.yaml  config.robot-screening.deepseek.yaml  config.scopus-formal-run.deepseek.yaml  config.scopus-formal-run.yaml  config.scopus-screening.deepseek.yaml  config.scopus-screening.kimi.yaml  config.small-batch.yaml
literature_screening/data/: manifest.json
(+4616 files in other folders)
