[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-screening"
version = "0.1.0"
description = "AI-assisted literature screening pipeline for merged literature export files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bibtexparser>=1.4.1",
  "httpx>=0.27.0",
  "jsonschema>=4.23.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
ui = [
  "streamlit>=1.44.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
